documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef int BOOL;
typedef void* HCARD;

C11W32API VOID __stdcall C11_RTWrSWD(USHORT statusflags,HCARD handleval);

C11W32API USHORT __stdcall C11_SelfTest(HCARD handleval);

C11W32API BOOL __stdcall C11_Start(HCARD handleval);

C11W32API BOOL __stdcall C11_Stop(HCARD handleval);

C11W32API INT __stdcall C11_TransmitMsg(BOOL busab,USHORT cwd,LPUSHORT dataptr,LPUSHORT swd,HCARD handleval);

C11W32API INT __stdcall C11_TransmitRTRT(BOOL busab,USHORT cwd1,USHORT cwd2,LPUSHORT dataptr,LPUSHORT swd1,LPUSHORT swd2,HCARD handleval);

C11W32API VOID __stdcall C11_UnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRval,LPINT SAval,LPINT WCval);

C11W32API VOID __stdcall C11_WrPort(USHORT Data,USHORT Register,HCARD handleval);


/**
*
*  Internal functions used by the CM1553-1 Driver.
*
**/

C11W32API USHORT __stdcall C11_BCAddrData(INT index,HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockAddr(INT index,HCARD handleval);

C11W32API VOID __stdcall C11_BCBlockClear(HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockCount(HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockCtrl(INT index,HCARD handleval);

C11W32API VOID __stdcall C11_BCBlockInit(LPUSHORT block,USHORT opcode);

C11W32API INT __stdcall C11_BCBlockInsert(LPUSHORT block,HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockRead(INT index,LPUSHORT block,HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockWrite(INT index,LPUSHORT block,HCARD handleval);

C11W32API USHORT __stdcall C11_BCCycleAddr(INT index,HCARD handleval);

C11W32API VOID __stdcall C11_BCCycleClear(HCARD handleval);

C11W32API USHORT __stdcall C11_BCCycleInsert(LPUSHORT cycle,HCARD handleval);

C11W32API VOID __stdcall C11_BCCycleRestart(HCARD handleval);

C11W32API USHORT __stdcall C11_BCCycleWrite(INT index,LPUSHORT cycle,HCARD handleval);

C11W32API VOID __stdcall C11_ClrAllILLEGAL(HCARD handleval);

C11W32API VOID __stdcall C11_ClrILLEGAL(INT subaddr,BOOL trbit,BOOL mcflag,BOOL bcastflag,HCARD handleval);

C11W32API ULONG __stdcall C11_Div(ULONG diva,ULONG divb);

C11W32API VOID __stdcall C11_FillMem(USHORT Data,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API USHORT __stdcall C11_GetBCAST(HCARD handleval);

C11W32API USHORT __stdcall C11_GetBUF(HCARD handleval);

C11W32API USHORT __stdcall C11_GetCHAN(HCARD handleval);

C11W32API USHORT __stdcall C11_GetCIRCLE(HCARD handleval);

C11W32API USHORT __stdcall C11_GetDYNBC(HCARD handleval);

C11W32API USHORT __stdcall C11_GetEXT(HCARD handleval);

C11W32API USHORT __stdcall C11_GetHigh(ULONG val);

C11W32API USHORT __stdcall C11_GetILLEGAL(INT subaddr,BOOL trbit,BOOL mcflag,BOOL bcastflag,HCARD handleval);

C11W32API USHORT __stdcall C11_GetINT(HCARD handleval);

C11W32API USHORT __stdcall C11_GetIntLog(HCARD handleval);

C11W32API USHORT __stdcall C11_GetINTMASK(HCARD handleval);

C11W32API USHORT __stdcall C11_GetLow(ULONG val);

C11W32API USHORT __stdcall C11_GetMODE(HCARD handleval);

C11W32API USHORT __stdcall C11_GetMonCtrl(HCARD handleval);

C11W32API VOID __stdcall C11_GetMonFilt(LPUSHORT valuel,LPUSHORT valueh,HCARD handleval);

C11W32API USHORT __stdcall C11_GetPP(HCARD handleval);

C11W32API USHORT __stdcall C11_GetRTADDR(HCARD handleval);

C11W32API USHORT __stdcall C11_GetStatus(HCARD handleval);

C11W32API USHORT __stdcall C11_GetSTD(HCARD handleval);

C11W32API USHORT __stdcall C11_GetTIMEOUT(HCARD handleval);

C11W32API USHORT __stdcall C11_GetXMTSW(HCARD handleval);

C11W32API USHORT __stdcall C11_HeapAlloc(USHORT wordcount,HCARD handleval);

C11W32API USHORT __stdcall C11_HeapAvail(HCARD handleval);

C11W32API VOID __stdcall C11_HeapClear(HCARD handleval);

C11W32API USHORT __stdcall C11_HeapRdHead(HCARD handleval);

C11W32API VOID __stdcall C11_HeapWrHead(USHORT value,HCARD handleval);

C11W32API INT __stdcall C11_INTDisable(HCARD handleval);

C11W32API INT __stdcall C11_INTEnable(HCARD handleval);

C11W32API USHORT __stdcall C11_INTRdPend(HCARD handleval);