documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32NET.CS

        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTWrSWD@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_RTWrSWD(UInt16 statusflags, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SelfTest@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_SelfTest(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Start@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_Start(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Stop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_Stop(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_TransmitMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_TransmitMsg(Int32 busab, UInt16 cwd, ref UInt16 dataptr, ref UInt16 swd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_TransmitRTRT@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_TransmitRTRT(Int32 busab, UInt16 cwd1, UInt16 cwd2, ref UInt16 dataptr, ref UInt16 swd1, ref UInt16 swd2, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_UnpackCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_UnpackCWD(UInt16 cwdval, ref Int32 taval, ref Int32 trval, ref Int32 saval, ref Int32 wcval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_WrPort@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_WrPort(UInt16 data, UInt16 register, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCAddrData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCAddrData(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCBlockAddr(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_BCBlockClear(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockCount@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCBlockCount(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockCtrl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCBlockCtrl(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_BCBlockInit(ref UInt16 block, UInt16 opcode);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockInsert@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCBlockInsert(ref UInt16 block, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCBlockRead(Int32 index, ref UInt16 block, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBlockWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCBlockWrite(Int32 index, ref UInt16 block, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCycleAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCCycleAddr(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCycleClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_BCCycleClear(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCycleInsert@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCCycleInsert(ref UInt16 cycle, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCycleRestart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_BCCycleRestart(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCycleWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCCycleWrite(Int32 index, ref UInt16 cycle, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_ClrAllILLEGAL@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_ClrAllILLEGAL(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_ClrILLEGAL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_ClrILLEGAL(Int32 subaddr, Int32 trbit, Int32 mcflag, Int32 bcastflag, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_Div(UInt32 diva, UInt32 divb);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_FillMem@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_FillMem(UInt16 data, UInt16 wordoffset, Int32 iwordcount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetBCAST@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetBCAST(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetBUF@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetBUF(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetCHAN@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetCHAN(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetCIRCLE@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetCIRCLE(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetDYNBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetDYNBC(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetEXT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetEXT(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetHigh(UInt32 val);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetILLEGAL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetILLEGAL(Int32 subaddr, Int32 trbit, Int32 mcflag, Int32 bcastflag, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetINT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetINT(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetIntLog@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetIntLog(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetINTMASK@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetINTMASK(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetLow(UInt32 val);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetMODE@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetMODE(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetMonCtrl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetMonCtrl(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetMonFilt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_GetMonFilt(ref UInt16 valuel, ref UInt16 valueh, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetPP@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetPP(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetRTADDR@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetRTADDR(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetStatus(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetSTD@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetSTD(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetTIMEOUT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetTIMEOUT(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetXMTSW@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetXMTSW(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_HeapAlloc(UInt16 wordcount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_HeapAvail@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_HeapAvail(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_HeapClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_HeapClear(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_HeapRdHead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_HeapRdHead(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_HeapWrHead@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_HeapWrHead(UInt16 value, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_INTDisable(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_INTEnable(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTRdPend@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_INTRdPend(UInt32 handleval);
